force-app/main/default/objects/Integration_Message__c/Integration_Message__c.object-meta.xml
<CustomObject>
    <label>Integration Message</label>
    <pluralLabel>Integration Messages</pluralLabel>
    <nameField>
        <displayFormat>MSG-{0000000000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>