force-app/main/default/objects/Integration_Message__c/fields/Applied_Status__c.field-meta.xml
<CustomField>
    <fullName>Applied_Status__c</fullName>
    <label>Applied Status</label>
    <type>Text</type>
    <length>80</length>
</CustomField>