force-app/main/default/objects/Integration_Message__c/fields/Salesforce_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Record_Id__c</fullName>
    <label>Salesforce Record Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>